syntax = "proto3";

message TagGroupConfig {
    string path = 1;
    repeated string items = 2;
}